<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Custom_CardView_Dialog"
    android:layout_width="match_parent"
    android:layout_marginHorizontal="@dimen/margin_8">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitle"
            style="@style/Text_Regular_Bold"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_8"
            android:text="@string/export_messages"
            android:textSize="@dimen/textsize_18" />

        <TextView
            android:id="@+id/tvDescription"
            style="@style/Text_Regular"
            android:layout_marginVertical="@dimen/margin_10"
            android:text="@string/are_you_sure_you_want_to_export_sms_"
            android:textSize="@dimen/textsize_16" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvExportCancel"
                style="@style/Text_Dialog_button"
                android:text="@string/cancel" />

            <View style="@style/Devider_Column_1PX" />

            <TextView
                android:id="@+id/tvExportOk"
                style="@style/Text_Dialog_button"
                android:text="@string/ok" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
